grid progress, basic button functionality

--- a/index.html
+++ b/index.html
@@ -8,10 +8,17 @@
     <title>Snakes & Ladders</title>
 </head>
 <body>
-    <div class="container" id="grid">
+    <div class="container">
+        <h3>Snakes & Ladders</h3>
+        <button id="startBtn" class="btn">Start</button></div>
+    <div class="container main" id="grid">
 
     </div>
-    
+    <div class="container dice">
+        <p class="player"><strong>Player 1: </strong> <span class="score" id="p1-score">0</span></p>
+        <p class="player"><strong>Player 2: </strong> <span class="score" id="p2-score">0</span></p>
+        <button id="rollBtn" class="btn">Roll</button>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
