added dice rolling, random player start

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="container dice">
         <p class="player"><strong>Player 1: </strong> <span class="score" id="p1-score">0</span></p>
         <p class="player"><strong>Player 2: </strong> <span class="score" id="p2-score">0</span></p>
-        <button id="rollBtn" class="btn">Roll</button>
+        <button id="rollBtn" class="btn">Roll <span class="player-display"></span></button>
     </div>
     <script src="script.js"></script>
 </body>
