--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,18 +8,26 @@
     <link rel="stylesheet" href="style.css">
     <title>Snakes & Ladders</title>
 </head>
-<body>
-    <div class="container">
-        <h3>Snakes & Ladders</h3>
-        <button id="startBtn" class="btn">Start</button></div>
-    <div class="container main" id="grid">
 
-    </div>
-    <div class="container dice">
-        <p class="player"><strong>Player 1: </strong> <span class="score" id="p1-score">0</span></p>
-        <p class="player"><strong>Player 2: </strong> <span class="score" id="p2-score">0</span></p>
-        <button id="rollBtn" class="btn">Roll <span class="player-display"></span></button>
-    </div>
+<body>
+
+        <div class="container">
+            <h3>Snakes & Ladders</h3>
+            <button id="startBtn" class="btn">Start</button>
+        </div>
+        <div class="container main" id="grid">
+
+        </div>
+        <div class="container dice">
+            <p class="player"><strong>Player 1: </strong> <span class="score" id="p1-score">0</span></p>
+            <p class="player"><strong>Player 2: </strong> <span class="score" id="p2-score">0</span></p>
+            <button id="rollBtn" class="btn">Roll <span class="player-display"></span></button>
+
+            <div class="overlay">
+                
+            </div>
+        </div>
     <script src="script.js"></script>
 </body>
+
 </html>
